--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3859,22 +3859,25 @@ enrollment, talk to Julie Zercher look up at CHEM tamu.edu}
 \experiment{Process_X3}
 
 \begin{todolist}
-\item{Stop count $\boxed{10\ AqIII\ C}$ early morning}
-\item{Start count $\boxed{8\ OrIII\ C}$ early morning}
-\item{Transfer $\boxed{8\ AqIII\ C}$, $\boxed{9\ AqIII\ C}$,
+\item[\done]{Stop count $\boxed{10\ AqIII\ C}$ $\sim$ 8:30 am}
+\item[\done]{Start count $\boxed{8\ OrIII\ C}$ $\sim$ 8:30 am}
+\item[\done]{Transfer $\boxed{8\ AqIII\ C}$, $\boxed{9\ AqIII\ C}$,
   $\boxed{10\ AqIII\ C}$ into glove box}
-\item{Transfer $\boxed{8\ AqIII\ C}$ into $\boxed{8\ AqIII}$}
-\item{Transfer $\boxed{9\ AqIII\ C}$ into $\boxed{9\ AqIII}$}
-\item{Transfer $\boxed{10\ AqIII\ C}$ into $\boxed{10\ AqIII}$}
+  \begin{itemize}
+  \item{In plastic bag (2.5 ml in a 15 ml parafilm wrapped),
+    inside the glass beaker - the plastic bag popped
+    under the negative pressure and the glass beaker tipped over}
+  \item{Centrifuged vials at 2500 rpm for 4 minutes}
+  \end{itemize}
 \end{todolist}
 
 Fourth contact
 
 \begin{todolist}
 
-\item{Label vials,
+\item[\done]{Label vials,
   $\boxed{8\ aqIV}$,
-  $\boxed{8\ aqIV\ C}$,  $\boxed{8\ orVI}$,
+  $\boxed{8\ aqIV\ C}$,  $\boxed{8\ orIV}$,
   $\boxed{8\ orIV\ C}$
   $\boxed{9\ aqIV}$,  $\boxed{9\ aqIV\ C}$,  $\boxed{9\ orIV}$,
   $\boxed{9\ orIV\ C}$
@@ -3889,8 +3892,10 @@ Fourth contact
   $\boxed{8\ mixIV}$, $\boxed{9\ mixIV}$,
     $\boxed{10\ mixIV}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
-
-\item{Transfer:
+\item[\done]{Label new vials of old vials...these vials are the
+  2.5 ml vials, but have clear push caps that actually fit.
+  $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.}
+\item[\done]{Transfer:
   $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
   $\boxed{8\ orIII\ C}$
   $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
@@ -3904,14 +3909,19 @@ Fourth contact
   $\boxed{9\ orIII\ Dilution}$,
   $\boxed{10\ orIII\ Dilution}$,
   $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
-  $\boxed{10\ miIIIx}$.
+  $\boxed{10\ mixIII}$. With old/new $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.
   (3 clear push caps, and 9 blue push caps
   9 red push caps). With three centrifuge tubes}
-
-\item{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
-  $\boxed{10\ aqIII}$ for 3,300 rpm. 4 minutes to get liquid to
+\item[\done]{Transfer $\boxed{8\ AqIII\ C}$ + $\boxed{8\ AqIII}$ (old)
+     into $\boxed{8\ AqIII}$ (new)}
+\item[\done]{Transfer $\boxed{9\ AqIII\ C}$ into $\boxed{9\ AqIII}$ (old)
+     into $\boxed{9\ AqIII}$ (new)}
+\item[\done]{Transfer $\boxed{10\ AqIII\ C}$ into $\boxed{10\ AqIII}$ (old)
+     into $\boxed{10\ AqIII}$ (new)}
+\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+  $\boxed{10\ aqIII}$ for 2,500 rpm. 4 minutes to get liquid to
   bottom}
-\item{Measure volumes of all aqueous phases, $\boxed{8\ aqIII}$
+\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqIII}$
      $\boxed{9\ aqIII}$, $\boxed{10\ aqIII}$}
 \begin{table}[H]
   \begin{center}
@@ -3919,27 +3929,27 @@ Fourth contact
     \begin{tabular}{l l l}
       \toprule
       Series & Aqueous (8,9, or 10)\\ 
-      8 &   \\
-      9 &   \\
-      10 &  \\
+      8 & 315+/-3\%\\
+      9 & 320+/-3\%\\
+      10 & 308+/-3\%\\
       \bottomrule
     \end{tabular}
   \end{center}
 \end{table}  
 \
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqIII}$}
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqIII}$}
-\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqIII}$}
-\item{Vortex mix $\boxed{8\ aqIII}$
+\item[\done]{Add 315 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqIII}$}
+\item[\done]{Add 320 $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqIII}$}
+\item[\done]{Add 308 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqIII}$}
+\item[\done]{Vortex mix $\boxed{8\ aqIII}$
   for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{9\ aqIII}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{10\ aqIII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ aqIII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ aqIII}$ for 15 minutes on pulse mode}
 
-\item{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
   and $\boxed{10\ aqIII}$
   with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
-\item{Pipette with disposable pipette the organic phase
+\item[\done]{Pipette with disposable pipette the organic phase
   first, then the aqueous (for all three vials),
   (also used different disposable pipettes for the
   different phases - no contamination)
@@ -3952,14 +3962,22 @@ Fourth contact
   on the following page
   , also make dilution of each of the phases. Directly below
   are notes for what happened in the initial transfer,
-  and below that are notes for the dilution.}
+  and below that are notes for the dilution.
+  Also consolodated waste after experiment. All interfaces into the
+  first mix $\boxed{8\ Mix}$, $\boxed{9\ mix}$, and $\boxed{10\ mix}$,
+  also all excess aqueous phase was put into here as well.
+  All excess organic (after dilution and creation of count vial, was
+  put into a single organic vial $\boxed{8\ Or}$, $\boxed{9\ Or}$,
+  and $\boxed{10\ Or}$.)}
   \begin{itemize}
-  \item{Some notes}\vspace{2cm}
+  \item{When transfering interface of $\boxed{8\ AqIII}$ lost a drop}
+  \item{Also $\boxed{8\ OrIV\ C}$ might have 248 $\mu$l (less than 250)}
+  \item{Same with $\boxed{9\ OrIV\ C}$}
   \end{itemize}
   
-\item{Make dilution of each aqueous}
+\item[\done]{Make dilution of each aqueous}
   \begin{todolist}
-  \item{- $\boxed{8\ aqIV}$}
+  \item[\done]{- $\boxed{8\ aqIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ aqIV}$
@@ -3971,7 +3989,7 @@ Fourth contact
     0 M HNO\tsbs{3} $\boxed{8\ aqIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ aqIV}$}
+  \item[\done]{- $\boxed{9\ aqIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ aqIV}$
@@ -3983,7 +4001,7 @@ Fourth contact
     0 M HNO\tsbs{3} $\boxed{9\ aqIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ aqIV}$}
+  \item[\done]{- $\boxed{10\ aqIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ aqIV}$
@@ -3995,9 +4013,9 @@ Fourth contact
     0 M HNO\tsbs{3} $\boxed{10\ aqIV\ Dilution}$
   \end{center}
 
-\item{Make dilution of each organic phase}
+\item[\done]{Make dilution of each organic phase}
   \begin{todolist}
-  \item{- $\boxed{8\ orIV}$}
+  \item[\done]{- $\boxed{8\ orIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ orIV}$
@@ -4008,7 +4026,7 @@ Fourth contact
     1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ orIV}$}
+  \item[\done]{- $\boxed{9\ orIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ orIV}$
@@ -4019,7 +4037,7 @@ Fourth contact
     1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIV\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ orIV}$}
+  \item[\done]{- $\boxed{10\ orIV}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ orIV}$
@@ -4030,21 +4048,19 @@ Fourth contact
     1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIV\ Dilution}$
   \end{center}
  
-\item{Transfer out $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+\item[\done]{Transfer out $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
   $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
   $\boxed{10\ aqIV\ C}$, in 15 ml centrifuge tubes}
-\item{Clean stuff in glovebox}
-\item{Radiac wash the above tubes, and store in fumehood behind
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item{Centrifuge $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+\item[\done]{Centrifuge $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
   $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
   $\boxed{10\ aqIV\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
-\item{Stop count $\boxed{8\ OrIII\ C}$ at TIME pm}
-\item{Start count $\boxed{9\ OrIII\ C}$ at TIME pm}
-\item{Stop count $\boxed{9\ OrIII\ C}$ at LATE pm}
-\item{Start count $\boxed{10\ OrIII\ C}$ at LATE pm (count over night)}
- 
+\item[\done]{Stop count $\boxed{8\ OrIII\ C}$ at 7:30 pm}
+\item[\done]{Start count $\boxed{9\ OrIII\ C}$ at 7:30 pm
+           (count overnight)} 
 \end{todolist}
 
 \begin{figure}[H] % Example of including images
@@ -4055,6 +4071,160 @@ Fourth contact
 \caption{Extraction three times round 2 extraction 3}
 \label{fig:round2_extraction3}
 \end{figure}
+
+
+\experiment{ToCheckout}
+
+\begin{todolist}
+\item{Dr. Burns mentioned that Pu-238 overlaps with
+  \tss{241}Am in the alpha spec}
+\end{todolist}
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday 9, December 2016}
+
+\experiment{Process_X3}
+
+\begin{todolist}
+\item{Stop count $\boxed{9\ OrIII\ C}$ (early morning)}
+\item{Start count $\boxed{10\ OrIII\ C}$ (early morning)}
+\item{Stop count $\boxed{10\ OrIII\ C}$ (late afternoon)}
+\item{Start count $\boxed{8\ OrIV\ C}$ (late afternoon)}
+\end{todolist}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's homework}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Satuday 10, December 2016}
+
+\experiment{Process_X3}
+
+\begin{todolist}
+\item{Stop count $\boxed{8\ OrIV\ C}$ (early morning)}
+\item{Start count $\boxed{9\ OrIV\ C}$ (early morning)}
+\item{Stop count $\boxed{9\ OrIV\ C}$ (late afternoon)}
+\item{Start count $\boxed{10\ OrIV\ C}$ (late afternoon)}
+\end{todolist}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's Homework}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday 8, December 2016}
+
+\experiment{Process_X3}
+
+\begin{todolist}
+\item{Stop count $\boxed{10\ OrIV\ C}$ (early morning)}
+\item{Start count $\boxed{8\ AqIV\ C}$ (early morning)}
+\item{Stop count $\boxed{8\ AqIV\ C}$ (noon)}
+\item{Start count $\boxed{9\ AqIV\ C}$ (noon)}
+\item{Stop count $\boxed{9\ AqIV\ C}$ (afternoon)}
+\item{Start count $\boxed{10\ OrIV\ C}$ (afternoon)}
+\item{Stop count $\boxed{10\ OrIV\ C}$ (late afternoon)}
+\end{todolist}
+
+
+Prepare for back extraction...
+
+Combine all aqueous,
+
+\begin{todolist}
+\item{Transfer $\boxed{8\ OrIII\ C}$, $\boxed{9\ OrIII\ C}$,
+  $\boxed{10\ OrIII\ C}$,
+  $\boxed{8\ AqIII\ C}$, $\boxed{9\ AqIII\ C}$,
+  $\boxed{10\ AqIII\ C}$,
+  $\boxed{8\ OrIV\ C}$, $\boxed{9\ OrIV\ C}$,
+  $\boxed{10\ OrIV\ C}$ into the glove box}
+\item{Add $\boxed{8\ AqIII\ C}$ to $\boxed{8\ Mix}$}
+\item{Add $\boxed{9\ AqIII\ C}$ to $\boxed{9\ Mix}$}
+\item{Add $\boxed{10\ AqIII\ C}$ to $\boxed{10\ Mix}$}
+\end{todolist}
+
+Combine all organic...
+
+\begin{todolist}
+\item{Add $\boxed{8\ OrIII\ C}$ to $\boxed{8\ Or}$}
+\item{Add $\boxed{8\ OrIV\ C}$ to $\boxed{8\ Or}$}
+\item{Add $\boxed{9\ OrIII\ C}$ to $\boxed{9\ Or}$}
+\item{Add $\boxed{9\ OrIV\ C}$ to $\boxed{9\ Or}$}
+\item{Add $\boxed{10\ OrIII\ C}$ to $\boxed{10\ Or}$}
+\item{Add $\boxed{10\ OrIV\ C}$ to $\boxed{10\ Or}$}
+\end{todolist}
+
+Measure volume of organic
+
+\begin{todolist}
+\item{Measure volumes of organics, $\boxed{8\ Or}$
+     $\boxed{9\ Or}$, $\boxed{10\ Or}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined aqueous phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Organic (8,9, or 10)\\ 
+      8 & \\
+      9 & \\
+      10 & \\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\end{todolist}
+
+
+Count the organic phases
+\begin{todolist}
+\item{Start count $\boxed{8\ Or}$ at 0 cm}
+\item{Stop count $\boxed{8\ Or}$ at 0 cm}
+\item{Start count $\boxed{9\ Or}$ at 0 cm}
+\item{Stop count $\boxed{9\ Or}$ at 0 cm}
+\item{Start count $\boxed{10\ Or}$ at 0 cm}
+\item{Stop count $\boxed{10\ Or}$ at 0 cm}
+\end{todolist}
+
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's Homework}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday 8, December 2016}
+
+\experiment{Process_X3}
+
+
+\begin{todolist}
+\item{Back extraction experiment 1}
+\item{Count }
+\end{todolist}
+
 
 
 
