--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4092,8 +4092,8 @@ Fourth contact
 \experiment{Process_X3}
 
 \begin{todolist}
-\item{Stop count $\boxed{9\ OrIII\ C}$ (early morning)}
-\item{Start count $\boxed{10\ OrIII\ C}$ (early morning)}
+\item[\done]{Stop count $\boxed{9\ OrIII\ C}$ ($\sim$ 7:20 am)}
+\item[\done]{Start count $\boxed{10\ OrIII\ C}$ ($\sim$ 7:20 am)}
 \item{Stop count $\boxed{10\ OrIII\ C}$ (late afternoon)}
 \item{Start count $\boxed{8\ OrIV\ C}$ (late afternoon)}
 \end{todolist}
