--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4094,14 +4094,17 @@ Fourth contact
 \begin{todolist}
 \item[\done]{Stop count $\boxed{9\ OrIII\ C}$ ($\sim$ 7:20 am)}
 \item[\done]{Start count $\boxed{10\ OrIII\ C}$ ($\sim$ 7:20 am)}
-\item{Stop count $\boxed{10\ OrIII\ C}$ (late afternoon)}
-\item{Start count $\boxed{8\ OrIV\ C}$ (late afternoon)}
+\item[\done]{Stop count $\boxed{10\ OrIII\ C}$ (late afternoon)}
+\item[\done]{Start count $\boxed{8\ OrIV\ C}$ (late afternoon)}
 \end{todolist}
 
 \experiment{School}
 
 \begin{todolist}
 \item{Dr. McClarren's homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \end{itemize}
 \end{todolist}
 
 %-----------------------------------------------------------------
@@ -4113,16 +4116,19 @@ Fourth contact
 \experiment{Process_X3}
 
 \begin{todolist}
-\item{Stop count $\boxed{8\ OrIV\ C}$ (early morning)}
-\item{Start count $\boxed{9\ OrIV\ C}$ (early morning)}
-\item{Stop count $\boxed{9\ OrIV\ C}$ (late afternoon)}
-\item{Start count $\boxed{10\ OrIV\ C}$ (late afternoon)}
+\item[\done]{Stop count $\boxed{8\ OrIV\ C}$ (early morning)}
+\item[\done]{Start count $\boxed{9\ OrIV\ C}$ (early morning)}
+\item[\done]{Stop count $\boxed{9\ OrIV\ C}$ (late afternoon)}
+\item[\done]{Start count $\boxed{10\ OrIV\ C}$ (late afternoon)}
 \end{todolist}
 
 \experiment{School}
 
 \begin{todolist}
 \item{Dr. McClarren's Homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \end{itemize}
 \end{todolist}
 
 
@@ -4130,19 +4136,84 @@ Fourth contact
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Sunday 8, December 2016}
+\labday{Sunday 11, December 2016}
 
 \experiment{Process_X3}
 
 \begin{todolist}
-\item{Stop count $\boxed{10\ OrIV\ C}$ (early morning)}
-\item{Start count $\boxed{8\ AqIV\ C}$ (early morning)}
-\item{Stop count $\boxed{8\ AqIV\ C}$ (noon)}
-\item{Start count $\boxed{9\ AqIV\ C}$ (noon)}
-\item{Stop count $\boxed{9\ AqIV\ C}$ (afternoon)}
-\item{Start count $\boxed{10\ OrIV\ C}$ (afternoon)}
-\item{Stop count $\boxed{10\ OrIV\ C}$ (late afternoon)}
+\item[\done]{Stop count $\boxed{10\ OrIV\ C}$ (early morning)}
+\item[\done]{Start count $\boxed{8\ AqIV\ C}$ (early morning)}
+\item[\done]{Stop count $\boxed{8\ AqIV\ C}$ (noon)}
+\item[\done]{Start count $\boxed{9\ AqIV\ C}$ (noon)}
+\item[\done]{Stop count $\boxed{9\ AqIV\ C}$ (afternoon)}
+\item[\done]{Start count $\boxed{10\ AqIV\ C}$ (afternoon)}
+\item[\done]{Stop count $\boxed{10\ AqIV\ C}$ (late afternoon)}
 \end{todolist}
+
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's Homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \end{itemize}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday 12, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's Homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \end{itemize}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday 13, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarren's Homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \end{itemize}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday 14, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item[\done]{Dr. McClarren's Homework}
+  \begin{itemize}
+  \item{This homework...is so long}
+  \item{But finally finished, it was 62 pages...}
+  \end{itemize}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday 15, December 2016}
 
 
 Prepare for back extraction...
@@ -4204,10 +4275,19 @@ Count the organic phases
 \end{todolist}
 
 
-\experiment{School}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday 16, December 2016}
+
+\experiment{Process_X3}
 
 \begin{todolist}
-\item{Dr. McClarren's Homework}
+\item{Back extraction experiment 1}
+\item{Count }
 \end{todolist}
 
 
@@ -4215,15 +4295,23 @@ Count the organic phases
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Monday 8, December 2016}
+\labday{Saturday 16, December 2016}
 
 \experiment{Process_X3}
 
-
 \begin{todolist}
-\item{Back extraction experiment 1}
+\item{Continue counting?}
 \item{Count }
 \end{todolist}
+
+
+
+
+
+
+
+
+
 
 
 
