--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4221,52 +4221,109 @@ Prepare for back extraction...
 Combine all aqueous,
 
 \begin{todolist}
-\item{Transfer $\boxed{8\ OrIII\ C}$, $\boxed{9\ OrIII\ C}$,
+\item[\done]{Transfer $\boxed{8\ OrIII\ C}$, $\boxed{9\ OrIII\ C}$,
   $\boxed{10\ OrIII\ C}$,
-  $\boxed{8\ AqIII\ C}$, $\boxed{9\ AqIII\ C}$,
-  $\boxed{10\ AqIII\ C}$,
+  $\boxed{8\ AqIV\ C}$, $\boxed{9\ AqIV\ C}$,
+  $\boxed{10\ AqIV\ C}$,
   $\boxed{8\ OrIV\ C}$, $\boxed{9\ OrIV\ C}$,
-  $\boxed{10\ OrIV\ C}$ into the glove box}
-\item{Add $\boxed{8\ AqIII\ C}$ to $\boxed{8\ Mix}$}
-\item{Add $\boxed{9\ AqIII\ C}$ to $\boxed{9\ Mix}$}
-\item{Add $\boxed{10\ AqIII\ C}$ to $\boxed{10\ Mix}$}
+  $\boxed{10\ OrIV\ C}$ in plastic bag into the glove box}
+\item[\done]{Add $\boxed{8\ AqIII\ C}$ to $\boxed{8\ Mix}$}
+\item[\done]{Add $\boxed{9\ AqIII\ C}$ to $\boxed{9\ Mix}$}
+\item[\done]{Add $\boxed{10\ AqIII\ C}$ to $\boxed{10\ Mix}$}
+  \begin{itemize}
+  \item{$\boxed{10\ Mix}$ should be centrifuged next time used}
+  \end{itemize}
 \end{todolist}
 
 Combine all organic...
 
 \begin{todolist}
-\item{Add $\boxed{8\ OrIII\ C}$ to $\boxed{8\ Or}$}
-\item{Add $\boxed{8\ OrIV\ C}$ to $\boxed{8\ Or}$}
-\item{Add $\boxed{9\ OrIII\ C}$ to $\boxed{9\ Or}$}
-\item{Add $\boxed{9\ OrIV\ C}$ to $\boxed{9\ Or}$}
-\item{Add $\boxed{10\ OrIII\ C}$ to $\boxed{10\ Or}$}
-\item{Add $\boxed{10\ OrIV\ C}$ to $\boxed{10\ Or}$}
+\item[\done]{Add $\boxed{8\ OrIII\ C}$ to $\boxed{8\ Or}$}
+\item[\done]{Add $\boxed{8\ OrIV\ C}$ to $\boxed{8\ Or}$}
+\item[\done]{Add $\boxed{9\ OrIII\ C}$ to $\boxed{9\ Or}$}
+\item[\done]{Add $\boxed{9\ OrIV\ C}$ to $\boxed{9\ Or}$}
+\item[\done]{Add $\boxed{10\ OrIII\ C}$ to $\boxed{10\ Or}$}
+\item[\done]{Add $\boxed{10\ OrIV\ C}$ to $\boxed{10\ Or}$}
+\end{todolist}
+
+Create dilution of combined total organic
+
+\begin{todolist}
+\item[\done]{Label vials $\boxed{8\ Or\ Tot\ Dilution}$,
+  $\boxed{9\ Or\ Tot\ Dilution}$, $\boxed{10\ Or\ Tot\ Dilution}$}
+\item[\done]{Transfer $\boxed{8\ Or\ Tot\ Dilution}$,
+  $\boxed{9\ Or\ Tot\ Dilution}$, and $\boxed{10\ Or\ Tot\ Dilution}$,
+  into glovebox}
+\item[\done]{Make dilution of each organic phase}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ or}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ or}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI Water $\boxed{8\ or\ Tot\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ or}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ or}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{9\ or\ Tot\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ or}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ or}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{10\ or\ Tot\ Dilution}$
+  \end{center}
 \end{todolist}
 
 Measure volume of organic
 
 \begin{todolist}
-\item{Measure volumes of organics, $\boxed{8\ Or}$
-     $\boxed{9\ Or}$, $\boxed{10\ Or}$}
+\item[done]{Centrifuge 5 minutes for 2500 rpm $\boxed{8\ or}$,
+  $\boxed{9\ or}$, and $\boxed{10\ or}$ with buddy}
+\item[\done]{Measure volumes of organics, $\boxed{8\ Or}$
+  $\boxed{9\ Or}$, $\boxed{10\ Or}$ (I would guess there
+  is probably 1200 $\mu$l in the solution)}
 \begin{table}[H]
   \begin{center}
     \caption{Volumes for combined aqueous phases}
     \begin{tabular}{l l l}
       \toprule
       Series & Organic (8,9, or 10)\\ 
-      8 & \\
-      9 & \\
-      10 & \\
+      8 & 888\\
+      9 & 912\\
+      10 & 863\\
       \bottomrule
     \end{tabular}
   \end{center}
 \end{table}  
 \end{todolist}
-
+That is much less than what I expected, if this were a perfect world,
+there should be 1600 $\mu$l in those vials.
 
 Count the organic phases
 \begin{todolist}
-\item{Start count $\boxed{8\ Or}$ at 0 cm}
+\item[\done]{Transfer red lids into glovebox}
+\item[\done]{Change clear to red lids on the organic phases}
+\item[\done]{Transfer out $\boxed{8\ or}$, $\boxed{9\ or}$,
+  $\boxed{10\ or}$ of glovebox, clean, parafilm wrap, centrifuge}
+\item[\done]{Start count $\boxed{8\ Or}$ at 0 cm around 11:00 am,
+  there is a 5\% dead time, which is about what was
+  expected}
 \item{Stop count $\boxed{8\ Or}$ at 0 cm}
 \item{Start count $\boxed{9\ Or}$ at 0 cm}
 \item{Stop count $\boxed{9\ Or}$ at 0 cm}
@@ -4274,7 +4331,11 @@ Count the organic phases
 \item{Stop count $\boxed{10\ Or}$ at 0 cm}
 \end{todolist}
 
-
+Prepare for the next few days
+\begin{todolist}
+\item{Write procedure for back extractions}
+\item{Look at homework for 629}
+\end{todolist}
 
 
 %-----------------------------------------------------------------
@@ -4305,6 +4366,207 @@ Count the organic phases
 \end{todolist}
 
 
+
+Fourth contact
+
+\begin{todolist}
+
+\item[\done]{Label vials,
+  $\boxed{8\ aqIV}$,
+  $\boxed{8\ aqIV\ C}$,  $\boxed{8\ orIV}$,
+  $\boxed{8\ orIV\ C}$
+  $\boxed{9\ aqIV}$,  $\boxed{9\ aqIV\ C}$,  $\boxed{9\ orIV}$,
+  $\boxed{9\ orIV\ C}$
+  $\boxed{10\ aqIV}$, $\boxed{10\ aqIV\ C}$, $\boxed{10\ orIV}$,
+  $\boxed{10\ orIV\ C}$,
+  $\boxed{8\ aqIV\ Dilution}$,
+  $\boxed{9\ aqIV\ Dilution}$,
+  $\boxed{10\ aqIV\ Dilution}$,
+  $\boxed{8\ orIV\ Dilution}$,
+  $\boxed{9\ orIV\ Dilution}$,
+  $\boxed{10\ orIV\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixIV}$, $\boxed{9\ mixIV}$,
+    $\boxed{10\ mixIV}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+\item[\done]{Label new vials of old vials...these vials are the
+  2.5 ml vials, but have clear push caps that actually fit.
+  $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.}
+\item[\done]{Transfer:
+  $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
+  $\boxed{8\ orIII\ C}$
+  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
+  $\boxed{9\ orIII\ C}$
+  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
+  $\boxed{10\ orIII\ C}$,
+    $\boxed{8\ aqIII\ Dilution}$,
+  $\boxed{9\ aqIII\ Dilution}$,
+  $\boxed{10\ aqIII\ Dilution}$,
+  $\boxed{8\ orIII\ Dilution}$,
+  $\boxed{9\ orIII\ Dilution}$,
+  $\boxed{10\ orIII\ Dilution}$,
+  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
+  $\boxed{10\ mixIII}$. With old/new $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.
+  (3 clear push caps, and 9 blue push caps
+  9 red push caps). With three centrifuge tubes}
+\item[\done]{Transfer $\boxed{8\ AqIII\ C}$ + $\boxed{8\ AqIII}$ (old)
+     into $\boxed{8\ AqIII}$ (new)}
+\item[\done]{Transfer $\boxed{9\ AqIII\ C}$ into $\boxed{9\ AqIII}$ (old)
+     into $\boxed{9\ AqIII}$ (new)}
+\item[\done]{Transfer $\boxed{10\ AqIII\ C}$ into $\boxed{10\ AqIII}$ (old)
+     into $\boxed{10\ AqIII}$ (new)}
+\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+  $\boxed{10\ aqIII}$ for 2,500 rpm. 4 minutes to get liquid to
+  bottom}
+\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqIII}$
+     $\boxed{9\ aqIII}$, $\boxed{10\ aqIII}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined aqueous phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Aqueous (8,9, or 10)\\ 
+      8 & 315+/-3\%\\
+      9 & 320+/-3\%\\
+      10 & 308+/-3\%\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\
+\item[\done]{Add 315 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqIII}$}
+\item[\done]{Add 320 $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqIII}$}
+\item[\done]{Add 308 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqIII}$}
+\item[\done]{Vortex mix $\boxed{8\ aqIII}$
+  for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ aqIII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ aqIII}$ for 15 minutes on pulse mode}
+
+\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
+  and $\boxed{10\ aqIII}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
+
+\item[\done]{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial,
+  centrifuge, then transfer the rest.
+  Prepare counting solutions of 250 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  $\boxed{8\ aqIII}$
+  on the following page
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution.
+  Also consolodated waste after experiment. All interfaces into the
+  first mix $\boxed{8\ Mix}$, $\boxed{9\ mix}$, and $\boxed{10\ mix}$,
+  also all excess aqueous phase was put into here as well.
+  All excess organic (after dilution and creation of count vial, was
+  put into a single organic vial $\boxed{8\ Or}$, $\boxed{9\ Or}$,
+  and $\boxed{10\ Or}$.)}
+  \begin{itemize}
+  \item{When transfering interface of $\boxed{8\ AqIII}$ lost a drop}
+  \item{Also $\boxed{8\ OrIV\ C}$ might have 248 $\mu$l (less than 250)}
+  \item{Same with $\boxed{9\ OrIV\ C}$}
+  \end{itemize}
+  
+\item[\done]{Make dilution of each aqueous}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ aqIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqIV}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqIV\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ aqIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqIV}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqIV\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ aqIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqIV}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqIV\ Dilution}$
+  \end{center}
+
+\item[\done]{Make dilution of each organic phase}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ orIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orIV}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orIV\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ orIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orIV}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIV\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ orIV}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orIV}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIV\ Dilution}$
+  \end{center}
+ 
+\item[\done]{Transfer out $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
+  $\boxed{10\ aqIV\ C}$, in 15 ml centrifuge tubes}
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item[\done]{Centrifuge $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
+  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
+  $\boxed{10\ aqIV\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\item[\done]{Stop count $\boxed{8\ OrIII\ C}$ at 7:30 pm}
+\item[\done]{Start count $\boxed{9\ OrIII\ C}$ at 7:30 pm
+           (count overnight)} 
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_3}
+\end{center}
+\caption{Extraction three times round 2 extraction 3}
+\label{fig:round2_extraction3}
+\end{figure}
 
 
 
