--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -59,8 +59,13 @@
 \usepackage{mathrsfs}
 \usepackage{amsmath}
 \usepackage{soul}
+\usepackage{wasysym}
+\usepackage{bm}
 %\usepackage[normalem]{ulem}
 %\newcommand{\stkout}[1]{\ifmmode\text{\sout{\ensuremath{#1}}}\else\sout{#1}\fi}
+\usepackage{caption}
+\captionsetup{labelformat=empty}
+
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Command to make the lines in the title page
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
@@ -4300,7 +4305,7 @@ Measure volume of organic
   is probably 1200 $\mu$l in the solution)}
 \begin{table}[H]
   \begin{center}
-    \caption{Volumes for combined aqueous phases}
+    \caption{Volumes for combined organic phases}
     \begin{tabular}{l l l}
       \toprule
       Series & Organic (8,9, or 10)\\ 
@@ -4324,16 +4329,21 @@ Count the organic phases
 \item[\done]{Start count $\boxed{8\ Or}$ at 0 cm around 11:00 am,
   there is a 5\% dead time, which is about what was
   expected}
-\item{Stop count $\boxed{8\ Or}$ at 0 cm}
-\item{Start count $\boxed{9\ Or}$ at 0 cm}
-\item{Stop count $\boxed{9\ Or}$ at 0 cm}
-\item{Start count $\boxed{10\ Or}$ at 0 cm}
-\item{Stop count $\boxed{10\ Or}$ at 0 cm}
+\item{Stop count $\boxed{8\ Or}$ at 0 cm (2:20 pm)}
+\item{Start count $\boxed{9\ Or}$ at 0 cm (2:20 pm)}
+\item{Stop count $\boxed{9\ Or}$ at 0 cm (5:20 pm)}
+\item{Start count $\boxed{10\ Or}$ at 0 cm (5:20 pm) - leave over night}
 \end{todolist}
 
 Prepare for the next few days
 \begin{todolist}
-\item{Write procedure for back extractions}
+\item[\done]{Write procedure for back extractions}
+\item{Analyze results from previous extractions}
+  \begin{itemize}
+  \item{Extraction 3, extraction 4, reanalyze alpha results with
+    what Dr. Burns mentioned, write script to minimize variance
+    of results varying parameters like volume (not really)}
+  \end{itemize}
 \item{Look at homework for 629}
 \end{todolist}
 
@@ -4346,10 +4356,222 @@ Prepare for the next few days
 
 \experiment{Process_X3}
 
+Counting
+
 \begin{todolist}
-\item{Back extraction experiment 1}
-\item{Count }
+\item{Stop count $\boxed{10\ Or}$ at 0 cm}
+\item{Transfer $\boxed{8\ Or}$, $\boxed{9 \ Or}$, and $\boxed{10\ Or}$
+  into glove box}
 \end{todolist}
+
+\textbf{Back extraction experiment 1.}
+\textbf{Note }$\bm{\boxed{B}}$\textbf{ is for back extraction.}
+\textbf{Also special vials labeled below are the vials with clear push caps
+that actually make a good seal.}
+
+\begin{todolist}
+\item{Label vials,
+  $\boxed{8\ aqB}$,
+  $\boxed{8\ aqB\ C}$,  $\boxed{8\ orB}$ (special) \smiley,
+  $\boxed{8\ orB\ C}$
+  $\boxed{9\ aqB}$,  $\boxed{9\ aqB\ C}$,  $\boxed{9\ orB}$ (special),
+  $\boxed{9\ orB\ C}$
+  $\boxed{10\ aqB}$, $\boxed{10\ aqB\ C}$, $\boxed{10\ orB}$,
+  $\boxed{10\ orB\ C}$,
+  $\boxed{8\ aqB\ Dilution}$,
+  $\boxed{9\ aqB\ Dilution}$,
+  $\boxed{10\ aqB\ Dilution}$,
+  $\boxed{8\ orB\ Dilution}$,
+  $\boxed{9\ orB\ Dilution}$,
+  $\boxed{10\ orB\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixB}$, $\boxed{9\ mixB}$,
+    $\boxed{10\ mixB}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+
+\item{Transfer:
+  $\boxed{8\ aqB}$,
+  $\boxed{8\ aqB\ C}$,  $\boxed{8\ orB}$ (special) \smiley,
+  $\boxed{8\ orB\ C}$
+  $\boxed{9\ aqB}$,  $\boxed{9\ aqB\ C}$,  $\boxed{9\ orB}$ (special),
+  $\boxed{9\ orB\ C}$
+  $\boxed{10\ aqB}$, $\boxed{10\ aqB\ C}$, $\boxed{10\ orB}$,
+  $\boxed{10\ orB\ C}$,
+  $\boxed{8\ aqB\ Dilution}$,
+  $\boxed{9\ aqB\ Dilution}$,
+  $\boxed{10\ aqB\ Dilution}$,
+  $\boxed{8\ orB\ Dilution}$,
+  $\boxed{9\ orB\ Dilution}$,
+  $\boxed{10\ orB\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixB}$, $\boxed{9\ mixB}$,
+    $\boxed{10\ mixB}$ with
+  (3 clear push caps, and 9 blue push caps
+  9 red push caps) into glovebox in large plastic bag}
+
+\item{Remember volumes of organic phases, $\boxed{8\ or}$
+     $\boxed{9\ or}$, $\boxed{10\ or}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined organic phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Organic (8,9, or 10)\\ 
+      8 & 888\\
+      9 & 912\\
+      10 & 863\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\end{todolist}
+
+
+Create an Fe solution for a back extraction, $\boxed{Fe\ Prep}$
+(Small portions created right before the experiment because this
+solution has a short half life with larger concentrations of $HNO_3$).
+
+\begin{todolist}
+\item{-}
+\end{todolist}
+\begin{center}
+0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
++\\
+3.941+/-0.027 ml of 0.0+/-0 M Fe(II) in 4.06+/-0.05 M HNO\tsbs{3} solution $\boxed{Fe\ Prep}$\\
++\\
+4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
+\end{center}
+
+\textbf{Actual Back extraction}
+
+\begin{todolist}
+\item{Add 888 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{8\ or}$}
+\item{Add 912 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{9\ or}$}
+\item{Add 863 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{10\ or}$}
+\item{Vortex mix $\boxed{8\ or}$
+  for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9\ or}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10\ or}$ for 15 minutes on pulse mode}
+
+\item{Centrifuge $\boxed{8\ or}$, $\boxed{9\ or}$,
+  and $\boxed{10\ or}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
+
+\item[\done]{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial,
+  centrifuge, then transfer the rest.
+  Prepare counting solutions of 500 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  some step for series 8,
+  on the following page (picture is of a previous experiment,
+  but same process)
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution.}
+  \begin{itemize}
+  \item{some notes    \vspace{3cm}}
+  \end{itemize}
+  
+\item{Make dilution of each aqueous}
+  \begin{todolist}
+  \item{- $\boxed{8\ aqB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqB}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqB\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ aqB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqB}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqB\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ aqB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqB}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqB\ Dilution}$
+  \end{center}
+
+\item{Make dilution of each organic phase}
+  \begin{todolist}
+  \item{- $\boxed{8\ orB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orB}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{8\ orB\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ orB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orB}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{9\ orB\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ orB}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orB}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{10\ orB\ Dilution}$
+  \end{center}
+ 
+\item{Transfer out $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
+  $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
+  $\boxed{10\ aqB\ C}$, in 15 ml centrifuge tubes}
+\item{Clean stuff in glovebox}
+\item{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item{Centrifuge $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
+  $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
+  $\boxed{10\ aqB\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\item{Start count $\boxed{8\ OrB\ C}$} 
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_3}
+\end{center}
+\caption{Back extraction I, (different vial names, same procedure)}
+\label{fig:round2_extraction3}
+\end{figure}
+
 
 
 %-----------------------------------------------------------------
@@ -4367,220 +4589,13 @@ Prepare for the next few days
 
 
 
-Fourth contact
-
-\begin{todolist}
-
-\item[\done]{Label vials,
-  $\boxed{8\ aqIV}$,
-  $\boxed{8\ aqIV\ C}$,  $\boxed{8\ orIV}$,
-  $\boxed{8\ orIV\ C}$
-  $\boxed{9\ aqIV}$,  $\boxed{9\ aqIV\ C}$,  $\boxed{9\ orIV}$,
-  $\boxed{9\ orIV\ C}$
-  $\boxed{10\ aqIV}$, $\boxed{10\ aqIV\ C}$, $\boxed{10\ orIV}$,
-  $\boxed{10\ orIV\ C}$,
-  $\boxed{8\ aqIV\ Dilution}$,
-  $\boxed{9\ aqIV\ Dilution}$,
-  $\boxed{10\ aqIV\ Dilution}$,
-  $\boxed{8\ orIV\ Dilution}$,
-  $\boxed{9\ orIV\ Dilution}$,
-  $\boxed{10\ orIV\ Dilution}$ (smaller 2.5 ml tubes)
-  $\boxed{8\ mixIV}$, $\boxed{9\ mixIV}$,
-    $\boxed{10\ mixIV}$ (smaller 1 ml tubes from John Burns,
-    have conical bottoms, makes more minute separations easier)}
-\item[\done]{Label new vials of old vials...these vials are the
-  2.5 ml vials, but have clear push caps that actually fit.
-  $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.}
-\item[\done]{Transfer:
-  $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
-  $\boxed{8\ orIII\ C}$
-  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
-  $\boxed{9\ orIII\ C}$
-  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
-  $\boxed{10\ orIII\ C}$,
-    $\boxed{8\ aqIII\ Dilution}$,
-  $\boxed{9\ aqIII\ Dilution}$,
-  $\boxed{10\ aqIII\ Dilution}$,
-  $\boxed{8\ orIII\ Dilution}$,
-  $\boxed{9\ orIII\ Dilution}$,
-  $\boxed{10\ orIII\ Dilution}$,
-  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
-  $\boxed{10\ mixIII}$. With old/new $\boxed{8\ AqIII}$, $\boxed{9\ AqIII}$, and $\boxed{10\ AqIII}$.
-  (3 clear push caps, and 9 blue push caps
-  9 red push caps). With three centrifuge tubes}
-\item[\done]{Transfer $\boxed{8\ AqIII\ C}$ + $\boxed{8\ AqIII}$ (old)
-     into $\boxed{8\ AqIII}$ (new)}
-\item[\done]{Transfer $\boxed{9\ AqIII\ C}$ into $\boxed{9\ AqIII}$ (old)
-     into $\boxed{9\ AqIII}$ (new)}
-\item[\done]{Transfer $\boxed{10\ AqIII\ C}$ into $\boxed{10\ AqIII}$ (old)
-     into $\boxed{10\ AqIII}$ (new)}
-\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
-  $\boxed{10\ aqIII}$ for 2,500 rpm. 4 minutes to get liquid to
-  bottom}
-\item[\done]{Measure volumes of all aqueous phases, $\boxed{8\ aqIII}$
-     $\boxed{9\ aqIII}$, $\boxed{10\ aqIII}$}
-\begin{table}[H]
-  \begin{center}
-    \caption{Volumes for combined aqueous phases}
-    \begin{tabular}{l l l}
-      \toprule
-      Series & Aqueous (8,9, or 10)\\ 
-      8 & 315+/-3\%\\
-      9 & 320+/-3\%\\
-      10 & 308+/-3\%\\
-      \bottomrule
-    \end{tabular}
-  \end{center}
-\end{table}  
-\
-\item[\done]{Add 315 $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqIII}$}
-\item[\done]{Add 320 $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqIII}$}
-\item[\done]{Add 308 $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqIII}$}
-\item[\done]{Vortex mix $\boxed{8\ aqIII}$
-  for 15 minutes on pulse mode}
-\item[\done]{Vortex mix $\boxed{9\ aqIII}$ for 15 minutes on pulse mode}
-\item[\done]{Vortex mix $\boxed{10\ aqIII}$ for 15 minutes on pulse mode}
-
-\item[\done]{Centrifuge $\boxed{8\ aqIII}$, $\boxed{9\ aqIII}$,
-  and $\boxed{10\ aqIII}$
-  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
-
-\item[\done]{Pipette with disposable pipette the organic phase
-  first, then the aqueous (for all three vials),
-  (also used different disposable pipettes for the
-  different phases - no contamination)
-  as much as so that there is no mixing.
-  Then transferred the boundary to a smaller vial,
-  centrifuge, then transfer the rest.
-  Prepare counting solutions of 250 $\mu$l of each of the solutions
-  A picture will be provided for the whole process for
-  $\boxed{8\ aqIII}$
-  on the following page
-  , also make dilution of each of the phases. Directly below
-  are notes for what happened in the initial transfer,
-  and below that are notes for the dilution.
-  Also consolodated waste after experiment. All interfaces into the
-  first mix $\boxed{8\ Mix}$, $\boxed{9\ mix}$, and $\boxed{10\ mix}$,
-  also all excess aqueous phase was put into here as well.
-  All excess organic (after dilution and creation of count vial, was
-  put into a single organic vial $\boxed{8\ Or}$, $\boxed{9\ Or}$,
-  and $\boxed{10\ Or}$.)}
-  \begin{itemize}
-  \item{When transfering interface of $\boxed{8\ AqIII}$ lost a drop}
-  \item{Also $\boxed{8\ OrIV\ C}$ might have 248 $\mu$l (less than 250)}
-  \item{Same with $\boxed{9\ OrIV\ C}$}
-  \end{itemize}
-  
-\item[\done]{Make dilution of each aqueous}
-  \begin{todolist}
-  \item[\done]{- $\boxed{8\ aqIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ aqIV}$
-    (4 M HNO\tsbs{3}) [smaller pipette]\\
-    +\\
-    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{8\ aqIV\ Dilution}$
-  \end{center}
-  \begin{todolist}
-  \item[\done]{- $\boxed{9\ aqIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ aqIV}$
-    (4 M HNO\tsbs{3}) [smaller pipette]\\
-    +\\
-    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{9\ aqIV\ Dilution}$
-  \end{center}
-  \begin{todolist}
-  \item[\done]{- $\boxed{10\ aqIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ aqIV}$
-    (4 M HNO\tsbs{3}) [smaller pipette]\\
-    +\\
-    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{10\ aqIV\ Dilution}$
-  \end{center}
-
-\item[\done]{Make dilution of each organic phase}
-  \begin{todolist}
-  \item[\done]{- $\boxed{8\ orIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ orIV}$
-    (30\% TBP) [smaller pipette]\\
-    +\\
-    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orIV\ Dilution}$
-  \end{center}
-  \begin{todolist}
-  \item[\done]{- $\boxed{9\ orIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ orIV}$
-    (30\% TBP) [smaller pipette]\\
-    +\\
-    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIV\ Dilution}$
-  \end{center}
-  \begin{todolist}
-  \item[\done]{- $\boxed{10\ orIV}$}
-  \end{todolist}
-  \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ orIV}$
-    (30\% TBP) [smaller pipette]\\
-    +\\
-    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
-    =\\
-    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIV\ Dilution}$
-  \end{center}
- 
-\item[\done]{Transfer out $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
-  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
-  $\boxed{10\ aqIV\ C}$, in 15 ml centrifuge tubes}
-\item[\done]{Clean stuff in glovebox}
-\item[\done]{Radiac wash the above tubes, and store in fumehood behind
-  lead - wait to count}
-\item[\done]{Centrifuge $\boxed{8\ orIV\ C}$, $\boxed{8\ aqIV\ C}$,
-  $\boxed{9\ orIV\ C}$, $\boxed{9\ aqIV\ C}$, $\boxed{10\ orIV\ C}$,
-  $\boxed{10\ aqIV\ C}$, for 2 minutes 4,400 rpm to put all liquid at
-  bottom, then parafilm wrap all the vials and store in fumehood.}
-\item[\done]{Stop count $\boxed{8\ OrIII\ C}$ at 7:30 pm}
-\item[\done]{Start count $\boxed{9\ OrIII\ C}$ at 7:30 pm
-           (count overnight)} 
-\end{todolist}
-
-\begin{figure}[H] % Example of including images
-\begin{center}
-  \includegraphics[width=0.8\linewidth]
-                  {Figures/Cycle_x3_round_2_extraction_3}
-\end{center}
-\caption{Extraction three times round 2 extraction 3}
-\label{fig:round2_extraction3}
-\end{figure}
-
-
-
-
-
-
-
-
-
-
-
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
+
+%\smiley
+%\frownie
+
 %---------------------------------------
 % Blank template to use for new days:
 %---------------------------------------
