--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -117,6 +117,7 @@
 \newexperiment{Cycle_X3_round_2_alpha_ex2}{Cycle experiment, round 2,
   replicate of 3, ALPHA EXTRACTION II (also Mass Spec preparation)}
 \newexperiment{ToCheckout}{Things to Check}
+\newexperiment{Buy}{Things we need to buy}
 %\newexperiment{shorthand}{Description of the experiment}
 
 %----------------------------------------------------------------------
@@ -4329,10 +4330,10 @@ Count the organic phases
 \item[\done]{Start count $\boxed{8\ Or}$ at 0 cm around 11:00 am,
   there is a 5\% dead time, which is about what was
   expected}
-\item{Stop count $\boxed{8\ Or}$ at 0 cm (2:20 pm)}
-\item{Start count $\boxed{9\ Or}$ at 0 cm (2:20 pm)}
-\item{Stop count $\boxed{9\ Or}$ at 0 cm (5:20 pm)}
-\item{Start count $\boxed{10\ Or}$ at 0 cm (5:20 pm) - leave over night}
+\item[\done]{Stop count $\boxed{8\ Or}$ at 0 cm (2:20 pm)}
+\item[\done]{Start count $\boxed{9\ Or}$ at 0 cm (2:20 pm)}
+\item[\done]{Stop count $\boxed{9\ Or}$ at 0 cm (5:20 pm)}
+\item[\done]{Start count $\boxed{10\ Or}$ at 0 cm (5:20 pm) - leave over night}
 \end{todolist}
 
 Prepare for the next few days
@@ -4340,11 +4341,12 @@ Prepare for the next few days
 \item[\done]{Write procedure for back extractions}
 \item{Analyze results from previous extractions}
   \begin{itemize}
-  \item{Extraction 3, extraction 4, reanalyze alpha results with
+  \item[\done]{Extraction 3, extraction 4}
+  \item{ reanalyze alpha results with
     what Dr. Burns mentioned, write script to minimize variance
     of results varying parameters like volume (not really)}
   \end{itemize}
-\item{Look at homework for 629}
+\item[\done]{Look at homework for 629}
 \end{todolist}
 
 
@@ -4359,8 +4361,8 @@ Prepare for the next few days
 Counting
 
 \begin{todolist}
-\item{Stop count $\boxed{10\ Or}$ at 0 cm}
-\item{Transfer $\boxed{8\ Or}$, $\boxed{9 \ Or}$, and $\boxed{10\ Or}$
+\item[\done]{Stop count $\boxed{10\ Or}$ at 0 cm}
+\item[\done]{Transfer $\boxed{8\ Or}$, $\boxed{9 \ Or}$, and $\boxed{10\ Or}$
   into glove box}
 \end{todolist}
 
@@ -4370,13 +4372,13 @@ Counting
 that actually make a good seal.}
 
 \begin{todolist}
-\item{Label vials,
+\item[\done]{Label vials,
   $\boxed{8\ aqB}$,
   $\boxed{8\ aqB\ C}$,  $\boxed{8\ orB}$ (special) \smiley,
   $\boxed{8\ orB\ C}$
   $\boxed{9\ aqB}$,  $\boxed{9\ aqB\ C}$,  $\boxed{9\ orB}$ (special),
   $\boxed{9\ orB\ C}$
-  $\boxed{10\ aqB}$, $\boxed{10\ aqB\ C}$, $\boxed{10\ orB}$,
+  $\boxed{10\ aqB}$, $\boxed{10\ aqB\ C}$, $\boxed{10\ orB}$ (special),
   $\boxed{10\ orB\ C}$,
   $\boxed{8\ aqB\ Dilution}$,
   $\boxed{9\ aqB\ Dilution}$,
@@ -4388,7 +4390,7 @@ that actually make a good seal.}
     $\boxed{10\ mixB}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
 
-\item{Transfer:
+\item[\done]{Transfer:
   $\boxed{8\ aqB}$,
   $\boxed{8\ aqB\ C}$,  $\boxed{8\ orB}$ (special) \smiley,
   $\boxed{8\ orB\ C}$
@@ -4404,10 +4406,10 @@ that actually make a good seal.}
   $\boxed{10\ orB\ Dilution}$ (smaller 2.5 ml tubes)
   $\boxed{8\ mixB}$, $\boxed{9\ mixB}$,
     $\boxed{10\ mixB}$ with
-  (3 clear push caps, and 9 blue push caps
-  9 red push caps) into glovebox in large plastic bag}
+  (3 clear push caps, and 12 blue push caps
+  6 red push caps) into glovebox in large plastic bag}
 
-\item{Remember volumes of organic phases, $\boxed{8\ or}$
+\item[\done]{Remember volumes of organic phases, $\boxed{8\ or}$
      $\boxed{9\ or}$, $\boxed{10\ or}$}
 \begin{table}[H]
   \begin{center}
@@ -4430,7 +4432,7 @@ Create an Fe solution for a back extraction, $\boxed{Fe\ Prep}$
 solution has a short half life with larger concentrations of $HNO_3$).
 
 \begin{todolist}
-\item{-}
+\item[\done]{-}
 \end{todolist}
 \begin{center}
 0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
@@ -4443,18 +4445,18 @@ solution has a short half life with larger concentrations of $HNO_3$).
 \textbf{Actual Back extraction}
 
 \begin{todolist}
-\item{Add 888 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 888 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{8\ or}$}
-\item{Add 912 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 912 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{9\ or}$}
-\item{Add 863 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 863 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{10\ or}$}
-\item{Vortex mix $\boxed{8\ or}$
+\item[\done]{Vortex mix $\boxed{8\ or}$
   for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{9\ or}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{10\ or}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ or}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ or}$ for 15 minutes on pulse mode}
 
-\item{Centrifuge $\boxed{8\ or}$, $\boxed{9\ or}$,
+\item[\done]{Centrifuge $\boxed{8\ or}$, $\boxed{9\ or}$,
   and $\boxed{10\ or}$
   with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
@@ -4464,7 +4466,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
   different phases - no contamination)
   as much as so that there is no mixing.
   Then transferred the boundary to a smaller vial,
-  centrifuge, then transfer the rest.
+  centrifuge (3,300 for $\sim$ 5 minutes), then transfer the rest.
   Prepare counting solutions of 500 $\mu$l of each of the solutions
   A picture will be provided for the whole process for
   some step for series 8,
@@ -4474,12 +4476,12 @@ solution has a short half life with larger concentrations of $HNO_3$).
   are notes for what happened in the initial transfer,
   and below that are notes for the dilution.}
   \begin{itemize}
-  \item{some notes    \vspace{3cm}}
+  \item{Did pretty well this time around}
   \end{itemize}
   
-\item{Make dilution of each aqueous}
+\item[\done]{Make dilution of each aqueous}
   \begin{todolist}
-  \item{- $\boxed{8\ aqB}$}
+  \item[\done]{- $\boxed{8\ aqB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ aqB}$
@@ -4491,7 +4493,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{8\ aqB\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ aqB}$}
+  \item[\done]{- $\boxed{9\ aqB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ aqB}$
@@ -4503,7 +4505,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{9\ aqB\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ aqB}$}
+  \item[\done]{- $\boxed{10\ aqB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ aqB}$
@@ -4515,9 +4517,9 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{10\ aqB\ Dilution}$
   \end{center}
 
-\item{Make dilution of each organic phase}
+\item[\done]{Make dilution of each organic phase}
   \begin{todolist}
-  \item{- $\boxed{8\ orB}$}
+  \item[\done]{- $\boxed{8\ orB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ orB}$
@@ -4528,7 +4530,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{8\ orB\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ orB}$}
+  \item[\done]{- $\boxed{9\ orB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ orB}$
@@ -4539,7 +4541,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{9\ orB\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ orB}$}
+  \item[\done]{- $\boxed{10\ orB}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ orB}$
@@ -4550,17 +4552,17 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{10\ orB\ Dilution}$
   \end{center}
  
-\item{Transfer out $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
+\item[\done]{Transfer out $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
   $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
   $\boxed{10\ aqB\ C}$, in 15 ml centrifuge tubes}
-\item{Clean stuff in glovebox}
-\item{Radiac wash the above tubes, and store in fumehood behind
+\item[\done]{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item{Centrifuge $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
+\item[\done]{Centrifuge $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
   $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
   $\boxed{10\ aqB\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
-\item{Start count $\boxed{8\ OrB\ C}$} 
+\item[\done]{Start count $\boxed{8\ OrB\ C}$ at 12:36 pm} 
 \end{todolist}
 
 \begin{figure}[H] % Example of including images
@@ -4574,19 +4576,303 @@ solution has a short half life with larger concentrations of $HNO_3$).
 
 
 
+\begin{todolist}
+\item[\done]{Write up procedure for weekend and Monday}
+\end{todolist}
+
+
+
+\experiment{Buy}
+I kind of don't want to ask for this because anytime money comes
+up with Dr. Chirayath he gets really rude and mean.
+\begin{todolist}
+\item{500, 15 ml centrifuge tubes from VWR, catalog \# 89401-574
+  priced at \$302.98}
+\end{todolist}
+
+
+\experiment{Process_X3}
+\begin{todolist}
+\item[\done]{Prepare for second back extraction}
+\item{Stop count $\boxed{8\ OrB\ C}$ at 12:36 am}
+\item{Start count $\boxed{9\ OrB\ C}$ at 12:36 am} 
+\end{todolist}
+
 %-----------------------------------------------------------------
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Saturday 16, December 2016}
+\labday{Saturday 17, December 2016}
 
 \experiment{Process_X3}
 
+\textbf{Counting}
 \begin{todolist}
-\item{Continue counting?}
-\item{Count }
+\item{Stop count $\boxed{9\ OrB\ C}$ at 12:36 pm}
+\item{Start count $\boxed{10\ OrB\ C}$ at 12:36 pm}
+\item{Stop count $\boxed{10\ OrB\ C}$ at 12:36 am}
+\item{Start count $\boxed{8\ AqB\ C}$ at 12:36 am}
 \end{todolist}
 
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday 18, December 2016}
+
+\experiment{Process_X3}
+
+\textbf{Counting}
+\begin{todolist}
+\item{Stop count $\boxed{8\ AqB\ C}$ at 8:00 am}
+\item{Start count $boxed{9\ AqB\ C}$ at 8:00 am}
+\item{Stop count $\boxed{9\ AqB\ C}$ at 4:00 pm}
+\item{Start count $\boxed{10\ AqB\ C}$ at 4:00 pm}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday 19, December 2016}
+
+\experiment{Process_X3}
+
+\textbf{Counting}
+\begin{todolist}
+\item{Stop count $\boxed{10\ AqB\ C}$ at 8:00 am}
+\end{todolist}
+
+
+\textbf{Prepare for second back extraction}
+\begin{todolist}
+\item{Transfer $\boxed{8\ Or}$, $\boxed{9 \ Or}$, and $\boxed{10\ Or}$
+  into glove box}
+\item{Transfer into glovebox $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
+  $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
+  $\boxed{10\ aqB\ C}$, in 15 ml centrifuge tubes}
+\item{Label vials,
+  $\boxed{8\ aqBII}$,
+  $\boxed{8\ aqBII\ C}$,  $\boxed{8\ orBII}$ (special) \smiley,
+  $\boxed{8\ orBII\ C}$
+  $\boxed{9\ aqBII}$,
+  $\boxed{9\ aqBII\ C}$,  $\boxed{9\ orBII}$ (special),
+  $\boxed{9\ orBII\ C}$
+  $\boxed{10\ aqBII}$, $\boxed{10\ aqBII\ C}$,
+  $\boxed{10\ orBII}$ (special),
+  $\boxed{10\ orBII\ C}$,
+  $\boxed{8\ aqBII\ Dilution}$,
+  $\boxed{9\ aqBII\ Dilution}$,
+  $\boxed{10\ aqBII\ Dilution}$,
+  $\boxed{8\ orBII\ Dilution}$,
+  $\boxed{9\ orBII\ Dilution}$,
+  $\boxed{10\ orBII\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixBII}$, $\boxed{9\ mixBII}$,
+    $\boxed{10\ mixBII}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+
+\item{Transfer:   $\boxed{8\ aqBII}$,
+  $\boxed{8\ aqBII\ C}$,  $\boxed{8\ orBII}$ (special) \smiley,
+  $\boxed{8\ orBII\ C}$
+  $\boxed{9\ aqBII}$,
+  $\boxed{9\ aqBII\ C}$,  $\boxed{9\ orBII}$ (special),
+  $\boxed{9\ orBII\ C}$
+  $\boxed{10\ aqBII}$, $\boxed{10\ aqBII\ C}$,
+  $\boxed{10\ orBII}$ (special),
+  $\boxed{10\ orBII\ C}$,
+  $\boxed{8\ aqBII\ Dilution}$,
+  $\boxed{9\ aqBII\ Dilution}$,
+  $\boxed{10\ aqBII\ Dilution}$,
+  $\boxed{8\ orBII\ Dilution}$,
+  $\boxed{9\ orBII\ Dilution}$,
+  $\boxed{10\ orBII\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixBII}$, $\boxed{9\ mixBII}$,
+    $\boxed{10\ mixBII}$
+  with
+  (3 clear push caps, and 12 blue push caps
+  6 red push caps) into glovebox in large plastic bag}
+\end{todolist}
+\textbf{Combine all organic phases}
+
+\begin{todolist}  
+\item{Transfer $\boxed{8\ OrB\ C}$ into $\boxed{8\ OrB}$}
+\item{Transfer $\boxed{9\ OrB\ C}$ into $\boxed{9\ OrB}$}
+\item{Transfer $\boxed{10\ OrB\ C}$ into $\boxed{10\ OrB}$}
+  
+\item{Transfer $\boxed{8\ AqB\ C}$ into $\boxed{8\ AqB}$}
+\item{Transfer $\boxed{9\ AqB\ C}$ into $\boxed{9\ AqB}$}
+\item{Transfer $\boxed{10\ AqB\ C}$ into $\boxed{10\ AqB}$}
+  
+\item{Centrifuge $\boxed{8\ OrB}$, $\boxed{9\ OrB}$,
+  $\boxed{10\ OrB}$ for 2,500 rpm. 4 minutes to get liquid to
+  bottom}
+\item{Measure volumes of all organic phases, $\boxed{8\ OrB}$
+     $\boxed{9\ OrB}$, $\boxed{10\ OrB}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined organic phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Organic (8,9, or 10)\\ 
+      8 & XXX\\
+      9 & XXX\\
+      10 & XXX\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\end{todolist}
+
+Create an Fe solution for a back extraction, $\boxed{Fe\ Prep}$
+(Small portions created right before the experiment because this
+solution has a short half life with larger concentrations of $HNO_3$).
+
+\begin{todolist}
+\item{-}
+\end{todolist}
+\begin{center}
+0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
++\\
+3.941+/-0.027 ml of 0.0+/-0 M Fe(II) in 4.06+/-0.05 M HNO\tsbs{3} solution $\boxed{Fe\ Prep}$\\
++\\
+4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
+\end{center}
+
+\textbf{Actual Back extraction}
+
+\begin{todolist}
+\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{8\ orB}$}
+\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{9\ orB}$}
+\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{10\ orB}$}
+\item{Vortex mix $\boxed{8\ orB}$
+  for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9\ orB}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10\ orB}$ for 15 minutes on pulse mode}
+
+\item{Centrifuge $\boxed{8\ orB}$, $\boxed{9\ orB}$,
+  and $\boxed{10\ orB}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
+
+\item{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial,
+  centrifuge, then transfer the rest.
+  Prepare counting solutions of 500 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  some step for series 8,
+  on the following page (picture is of a previous experiment,
+  but same process)
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution. Also after
+  dilution and counting solutions are made, combine all remaining
+  aqueous solution into $\boxed{8\ aqB}$, $\boxed{9\ aqB}$,
+  or $\boxed{10\ aqB}$. }
+  \begin{itemize}
+  \item{some notes    \vspace{3cm}}
+  \end{itemize}
+  
+\item{Make dilution of each aqueous}
+  \begin{todolist}
+  \item{- $\boxed{8\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqBII\ Dilution}$
+  \end{center}
+
+\item{Make dilution of each organic phase}
+  \begin{todolist}
+  \item{- $\boxed{8\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{8\ orBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{9\ orBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{10\ orBII\ Dilution}$
+  \end{center}
+ 
+\item{Transfer out $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
+  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
+  $\boxed{10\ aqBII\ C}$, in 15 ml centrifuge tubes}
+\item{Clean stuff in glovebox}
+\item{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item{Centrifuge $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
+  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
+  $\boxed{10\ aqBII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\item{Start count $\boxed{8\ OrBII\ C}$} 
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_3}
+\end{center}
+\caption{Back extraction I, (different vial names, same procedure)}
+\label{fig:round2_extraction3}
+\end{figure}
 
 
 %----------------------------------------------------------------------
