--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4594,8 +4594,8 @@ up with Dr. Chirayath he gets really rude and mean.
 \experiment{Process_X3}
 \begin{todolist}
 \item[\done]{Prepare for second back extraction}
-\item{Stop count $\boxed{8\ OrB\ C}$ at 12:36 am}
-\item{Start count $\boxed{9\ OrB\ C}$ at 12:36 am} 
+\item[\done]{Stop count $\boxed{8\ OrB\ C}$ at 12:36 am}
+\item[\done]{Start count $\boxed{9\ OrB\ C}$ at 12:36 am} 
 \end{todolist}
 
 %-----------------------------------------------------------------
@@ -4608,10 +4608,8 @@ up with Dr. Chirayath he gets really rude and mean.
 
 \textbf{Counting}
 \begin{todolist}
-\item{Stop count $\boxed{9\ OrB\ C}$ at 12:36 pm}
-\item{Start count $\boxed{10\ OrB\ C}$ at 12:36 pm}
-\item{Stop count $\boxed{10\ OrB\ C}$ at 12:36 am}
-\item{Start count $\boxed{8\ AqB\ C}$ at 12:36 am}
+\item[\done]{Stop count $\boxed{9\ OrB\ C}$ at 12:36 pm}
+\item[\done]{Start count $\boxed{10\ OrB\ C}$ at 12:36 pm}
 \end{todolist}
 
 
@@ -4625,10 +4623,14 @@ up with Dr. Chirayath he gets really rude and mean.
 
 \textbf{Counting}
 \begin{todolist}
-\item{Stop count $\boxed{8\ AqB\ C}$ at 8:00 am}
-\item{Start count $boxed{9\ AqB\ C}$ at 8:00 am}
-\item{Stop count $\boxed{9\ AqB\ C}$ at 4:00 pm}
-\item{Start count $\boxed{10\ AqB\ C}$ at 4:00 pm}
+\item[\done]{Stop count $\boxed{10\ OrB\ C}$ at 8:00 am}
+\item[\done]{Start count $\boxed{8\ AqB\ C}$ at 8:00 am}
+\item[\done]{Stop count $\boxed{8\ AqB\ C}$ at 5:00 pm}
+\item[\done]{Start count $\boxed{9\ AqB\ C}$ at 5:00 pm}
+\item[\done]{Stop count $\boxed{9\ AqB\ C}$ at 10:00 pm}
+\item[\done]{Start count $\boxed{8\ OrBII\ C}$ at 10:00 pm (from experiment
+  desribed tomorrow (I did it on Sunday afternoon to get more
+count time)}
 \end{todolist}
 
 %-----------------------------------------------------------------
@@ -4641,16 +4643,15 @@ up with Dr. Chirayath he gets really rude and mean.
 
 \textbf{Counting}
 \begin{todolist}
-\item{Stop count $\boxed{10\ AqB\ C}$ at 8:00 am}
+\item[\done]{Stop count $\boxed{8\ OrBII\ C}$ at 11:00 am}
+\item[\done]{Start count $\boxed{9\ OrBII\ C}$ at 11:00 am}
 \end{todolist}
 
 
 \textbf{Prepare for second back extraction}
 \begin{todolist}
-\item{Transfer $\boxed{8\ Or}$, $\boxed{9 \ Or}$, and $\boxed{10\ Or}$
-  into glove box}
-\item{Transfer into glovebox $\boxed{8\ orB\ C}$, $\boxed{8\ aqB\ C}$,
-  $\boxed{9\ orB\ C}$, $\boxed{9\ aqB\ C}$, $\boxed{10\ orB\ C}$,
+\item{Transfer into glovebox $\boxed{8\ orB\ C}$,
+  $\boxed{9\ orB\ C}$, $\boxed{10\ orB\ C}$,
   $\boxed{10\ aqB\ C}$, in 15 ml centrifuge tubes}
 \item{Label vials,
   $\boxed{8\ aqBII}$,
